# xtypes

./: .gitignore  Cargo.toml  README.md
bookstore-example/: api.xt
src/: ast.rs  grammar.pest  lib.rs  linker.rs  main.rs  module_loader.rs  parser.rs  prelude.xt  sample.xt
src/snapshots/: linker__load_file_and_imports.snap  linker__test_symbol_map does not find symbol in non existent namespace.snap  linker__test_symbol_map finds symbol.snap  linker__test_symbol_map finds symbol2.snap  module_loader__FileModuleLoader::load_module.snap  module_loader__ModuleScope::load_module_and_imports.snap  parser__sample.xt.snap  xt__sample.xt.snap
src/writers/: mod.rs  rust.jens  rust.rs  typescript.jens  typescript.rs
tests/: output.rs
tests/bookstore/: api.xt  data.xt
tests/snapshots/: output__bookstore.api.xt.d.ts.snap  output__bookstore.data.xt.d.ts.snap  output__bookstore.data.xt.rs.snap  output__sample.xt.d.ts.snap  output__sample.xt.rs.snap
xtypes/: Cargo.toml
xtypes-json-rust/: Cargo.toml
xtypes-json-rust/src/: code_gen.rs  rust.jens
xtypes-json-rust/tests/: output.rs
xtypes-json-typescript/: Cargo.toml
xtypes-json-typescript/src/: typescript.rs
xtypes-json-typescript/tests/: output.rs
xtypes/src/: grammar.pest  lib.rs  module_loader.rs  parser.rs  sample.xt  sample2.xt
xtypes/src/snapshots/: module_loader__FileModuleLoader::load_module.snap
xtypes/src/writers/: rust.rs
xtypes/tests/: bookstore  output.rs
xtypes/tests/snapshots/: output__bookstore.data.xt.d.ts.snap  output__sample.xt.d.ts.snap  output__sample.xt.rs.snap
(+4 files in other folders)
